Implemented utils functions and playlist UI data rendering.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,50 +36,35 @@
                 <a class="h-max" href="/video/<%=video._id%>">
                     <div class="video mb-1">
                         <div
-                            class="cursor-pointer flex justify-center w-full rounded-xl h-56 bg-zinc-900 mb-2 relative overflow-hidden">
-                            <video class="h-full" muted src="/uploads/videos/<%=video.videoName%>"></video>
-                            <%if(video.thumbnail){%>
-                                <div class="thumbnail absolute top-0 left-0 w-full h-full bg-zinc-300 rounded-xl">
-                                    <img src="/uploads/images/<%=video.thumbnail%>" class="w-full h-full object-cover" alt="">
+                            class="cursor-pointer flex justify-center w-full rounded-xl h-56 bg-zinc-900 mb-2 relative">
+                            <%if(!video.type){%>
+                                <div
+                                    class="h-56 w-[96%] rounded-xl -top-2  absolute left-1/2 -translate-x-1/2 bg-zinc-300 ">
+                                </div>
+                                <div
+                                    class="h-56 w-[98%] rounded-xl -top-1  absolute left-1/2 -translate-x-1/2 bg-zinc-400 ">
                                 </div>
                                 <%}%>
+                                <video class="rounded-xl relative h-56 bg-zinc-200 mb-2" src="">
+                                </video>
                         </div>
                         <h2 class="leading-tight">
                             <%=video.title%>
                         </h2>
                         <h4 class="text-zinc-500 text-sm"><%=video.user.channel%></h4>
                         <div class="flex gap-1 items-center text-zinc-500">
-                            <h4 class="text-sm">
-                                <%=video.views.length%> views
-                            </h4>
-                            <i class="ri-circle-fill text-[4px]"></i>
+                            <%if(video.views){%>
+                                <h4 class="text-sm">
+                                    <%=video.views.length%> views
+                                </h4>
+                                <i class="ri-circle-fill text-[4px]"></i>
+                                <%}%>
                             <h4 class="text-sm"><%=video.timespan%> ago</h4>
                         </div>
                     </div>
                 </a>
                 <%})%>
-                    <div class="max-w-[25rem] mb-1 playlist relative">
-                        <div class="h-56 w-[96%] rounded-xl -top-2  absolute left-1/2 -translate-x-1/2 bg-zinc-300 ">
-                        </div>
-                        <div class="h-56 w-[98%] rounded-xl -top-1  absolute left-1/2 -translate-x-1/2 bg-zinc-400 ">
-                        </div>
-
-                        <div class="cursor-pointer rounded-xl h-56 bg-zinc-200 mb-2 relative overflow-hidden">
-                            <div
-                                class="thumbnail absolute top-0 left-0 w-full h-full bg-zinc-300 rounded-xl hover:hidden">
-                                <!-- <img src="https://jw-webmagazine.com/wp-content/uploads/2020/08/Anime-Demon-Slayer-Kimetsu-no-Yaiba.png" class="w-full h-full object-cover" alt=""> -->
-                            </div>
-                        </div>
-
-                        <h2 class="leading-tight">Attitude | Stand-up Comedy by Ravi Gupta Lorem ipsum dolor sit amet
-                            consectetur adipisicing elit.</h2>
-                        <h4 class="text-zinc-500 text-sm">channel name</h4>
-                        <div class="flex gap-1 items-center text-zinc-500">
-                            <h4 class="text-sm">15 views</h4>
-                            <i class="ri-circle-fill text-[4px]"></i>
-                            <h4 class="text-sm">12 hours ago</h4>
-                        </div>
-                    </div>
+                
 
 
 
