--- a/views/studio.ejs
+++ b/views/studio.ejs
@@ -109,8 +109,8 @@
             <div class="right w-[83vw] overflow-y-auto">
                 <h1 class="text-2xl font-medium p-5">Channel content</h1>
                 <div class="category px-5 border-b border-b-zinc-200 w-full mt-5 flex gap-5 items-center">
-                    <a href="/"><h1 class="font-semibold border-b-zinc-900 cursor-pointer text-md py-2 border-b w-fit border-b-2 px-1 hover:border-b-zinc-900 border-b-transparent">
-                        Home</h1></a>
+                    <h1 onclick="showAll(this,'content')" class="font-semibold border-b-zinc-900 cursor-pointer text-md py-2 border-b w-fit border-b-2 px-1 hover:border-b-zinc-900 border-b-transparent">
+                        Home</h1>
                     <h1 onclick="showAll(this,'video')" class="font-semibold cursor-pointer text-md py-2 border-b w-fit border-b-2 px-1 hover:border-b-zinc-900 border-b-transparent">
                         Videos</h1>
                     <h1 onclick="showAll(this,'short')" class="font-semibold cursor-pointer text-md py-2 border-b w-fit border-b-2 px-1 hover:border-b-zinc-900 border-b-transparent">
@@ -276,8 +276,8 @@
                                 <div class="border mt-6 border-zinc-700 rounded-md p-1 px-3">
                                     <span class="pointer-events-none text-zinc-600 text-[.8rem]">Visibility </span>
                                     <select name="visibility" class="bg-transparent w-full -ml-1 outline-none" required>
-                                        <option value="option1">Public</option>
-                                        <option value="option2">Private</option>
+                                        <option value="public">Public</option>
+                                        <option value="private">Private</option>
                                     </select>
                                 </div>
                                 <div class="border mt-6 border-zinc-700 rounded-md p-1 px-3">
@@ -312,7 +312,6 @@
                     uploadingAnimation()
                     uploadVideoFile('video');
                 } else if (uploadType === 'short') {
-                    console.log(uploadType)
                     let video = document.createElement('video');
                     video.src = URL.createObjectURL(input.files[0]);
                     video.addEventListener('loadedmetadata', function () {
@@ -488,13 +487,16 @@
         }
 
         function showAll(btn,type){
-            console.log(btn.parentNode.parentNode.querySelector('.filter .filteredVideo'))
+
+            btn.parentNode.querySelectorAll('h1').forEach((e)=>{
+                e.style.borderBottom = "2px solid transparent"
+            })
+            btn.style.borderBottom = "2px solid black"
+
             axios.post(`/showall/${type}`,{userId:'<%=loggedUser._id%>'})
             .then(response=>{
-                console.log(response.data)
                 btn.parentNode.parentNode.querySelector('.filter .filteredVideo').innerHTML=''
                 response.data.forEach((video,i)=>{
-                    
                     if(video.type==='short'||video.type==='video'){
                         btn.parentNode.parentNode.querySelector('.filter .filteredVideo').innerHTML+=`
                         <div class="video relative border-b py-3 flex justify-between">
