--- a/views/history.ejs
+++ b/views/history.ejs
@@ -1,168 +1,152 @@
 <%include ./partials/header%>
-<div class="right h-[85vh] flex-1 flex relative px-6">
+    <div class="right h-[85vh] flex-1 flex relative px-6">
 
-    <%if(loggedUser){%>
-    <div class="view-section w-2/3 overflow-y-auto h-full px-20 pt-8">
-        <h1 class="text-4xl font-bold mb-10">Watch History</h1>
-        <div class="day">
-            <h2 class="text-xl font-bold my-8">Today</h2>
-            <div id="watchHistoryVideos" class="videos mt-4">
-                <%loggedUser.watchedVideo.reverse().forEach(video=>{%>
-                    <div id="video<%=video._id%>" class="video w-full mb-1 flex gap-3 h-max">
-                        <div class="cursor-pointer shrink-0 w-[16vw] aspect-video rounded-xl bg-zinc-200 mb-2 relative overflow-hidden">
-                            <div class="thumbnail absolute top-0 left-0 w-full h-full bg-zinc-300 rounded-xl">
-                                <img src="/uploads/images/<%=video.thumbnail%>" class="w-full h-full object-cover" alt="">
-                            </div>
-                        </div>
-                        <div class="dets relative flex-1">
-                            <i class="text-xl ri-more-2-fill absolute z-[10] top-0 right-2 "></i>
-                            <i onclick="removeFromWatchHistory(this,'<%=video._id%>')" class="text-2xl ri-close-line absolute z-[10] top-0 right-14 font-light text-zinc-600"></i>
-                            <h2 class="leading-tight text-xl max-w-[18vw]"><%=video.title%>
-                            </h2>
-                            <div class="flex gap-1 items-center my-1.5 text-zinc-500">
-                                <h4 class="text-zinc-500 text-sm"><%=video.user.channel%></h4>
-                                <i class="ri-circle-fill text-[4px]"></i>
-                                <h4 class="text-sm"><%=video.views.length%> views</h4>
-                            </div>
-                            <p class="text-zinc-500 text-sm trauncate w-[80%]"><%=video.description.length>59?video.description.slice(0,60)+"...":video.description%></p>
-                        </div>
-                    </div>
-                    <%})%>
-            </div>
-
-        </div>
-        <div class="day">
-            <h2 class="text-xl font-bold my-8">Yesterday</h2>
-            <div class="flex items-center gap-1 py-1.5 mb-4 relative">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                    focusable="false" style="pointer-events: none; display: block;  height: 100%;">
-                    <g>
-                        <path
-                            d="M17.77,10.32l-1.2-.5L18,9.06a3.74,3.74,0,0,0-3.5-6.62L6,6.94a3.74,3.74,0,0,0,.23,6.74l1.2.49L6,14.93a3.75,3.75,0,0,0,3.5,6.63l8.5-4.5a3.74,3.74,0,0,0-.23-6.74Z"
-                            fill="red"></path>
-                        <polygon points="10 14.65 15 12 10 9.35 10 14.65" fill="#fff"></polygon>
-                    </g>
-                </svg>
-                <h2 class="text-xl font-bold">Shorts</h2>
-                <i class="text-xl ri-more-2-fill absolute top-1/2 -translate-y-1/2 right-14 "></i>
-
-            </div>
-            <div class="shorts flex w-full gap-1 mb-6">
-                <div class="short w-52 h-max shrink-0">
-                    <div class="video bg-zinc-300 rounded-lg w-full h-[18rem]"></div>
-                    <h4 class="text-sm font-semibold">Lorem ipsum dolor sit amet consectetur.</h4>
-                    <h4 class="text-zinc-500 text-sm"> 11M views</h4>
-                </div>
-                <div class="short w-52 h-max shrink-0">
-                    <div class="video bg-zinc-300 rounded-lg w-full h-[18rem]"></div>
-                    <h4 class="text-sm font-semibold">Lorem ipsum dolor sit amet consectetur.</h4>
-                    <h4 class="text-zinc-500 text-sm"> 11M views</h4>
-                </div>
-                <div class="short w-52 h-max shrink-0">
-                    <div class="video bg-zinc-300 rounded-lg w-full h-[18rem]"></div>
-                    <h4 class="text-sm font-semibold">Lorem ipsum dolor sit amet consectetur.</h4>
-                    <h4 class="text-zinc-500 text-sm"> 11M views</h4>
-                </div>
-
-            </div>
-            <hr>
-            <div class="videos mt-4">
-                <div class="video w-full mb-1 flex gap-3 h-max">
-                    <div
-                        class="cursor-pointer shrink-0 w-[16vw] aspect-video rounded-xl bg-zinc-200 mb-2 relative overflow-hidden">
-                        <div
-                            class="thumbnail absolute top-0 left-0 w-full h-full bg-zinc-300 rounded-xl hover:hidden">
-                            <!-- <img src="https://jw-webmagazine.com/wp-content/uploads/2020/08/Anime-Demon-Slayer-Kimetsu-no-Yaiba.png" class="w-full h-full object-cover" alt=""> -->
-                        </div>
-                    </div>
-                    <div class="dets relative flex-1">
-                        <i class="text-xl ri-more-2-fill absolute top-0 right-2 "></i>
-                        <i class="text-2xl ri-close-line absolute top-0 right-14 font-light text-zinc-600"></i>
-                        <h2 class="leading-tight text-xl max-w-[18vw]">Attitude | Stand-up Comedy by Ravi Gupta
-                            Lorem ipsum dolor sit amet
-                        </h2>
-                        <div class="flex gap-1 items-center my-1.5 text-zinc-500">
-                            <h4 class="text-zinc-500 text-sm">channel name</h4>
-                            <i class="ri-circle-fill text-[4px]"></i>
-                            <h4 class="text-sm">15 views</h4>
-                        </div>
-                        <p class="text-zinc-500 text-sm">descriptiom ipsum dolor sit amet, consectetur
-                            adipisicing.</p>
-                    </div>
-                </div>
-                <div class="video w-full mb-1 flex gap-3 h-max">
-                    <div
-                        class="cursor-pointer shrink-0 w-[16vw] aspect-video rounded-xl bg-zinc-200 mb-2 relative overflow-hidden">
-                        <div
-                            class="thumbnail absolute top-0 left-0 w-full h-full bg-zinc-300 rounded-xl hover:hidden">
-                            <!-- <img src="https://jw-webmagazine.com/wp-content/uploads/2020/08/Anime-Demon-Slayer-Kimetsu-no-Yaiba.png" class="w-full h-full object-cover" alt=""> -->
-                        </div>
-                    </div>
-                    <div class="dets relative flex-1">
-                        <i class="text-xl ri-more-2-fill absolute top-0 right-2 "></i>
-                        <i class="text-2xl ri-close-line absolute top-0 right-14 font-light text-zinc-600"></i>
-                        <h2 class="leading-tight text-xl max-w-[18vw]">Attitude | Stand-up Comedy by Ravi Gupta
-                            Lorem ipsum dolor sit amet
-                        </h2>
-                        <div class="flex gap-1 items-center my-1.5 text-zinc-500">
-                            <h4 class="text-zinc-500 text-sm">channel name</h4>
-                            <i class="ri-circle-fill text-[4px]"></i>
-                            <h4 class="text-sm">15 views</h4>
-                        </div>
-                        <p class="text-zinc-500 text-sm">descriptiom ipsum dolor sit amet, consectetur
-                            adipisicing.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <%}else{%>
-        <div class="flex w-2/3 h-full items-center pt-32 flex-col gap-4">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24" style="pointer-events: none; display: block; width: 12%; height: max-content;" viewBox="0 0 24 24" width="24" focusable="false"><g><path d="M14.97 16.95 10 13.87V7h2v5.76l4.03 2.49-1.06 1.7zM22 12c0 5.51-4.49 10-10 10S2 17.51 2 12h1c0 4.96 4.04 9 9 9s9-4.04 9-9-4.04-9-9-9C8.81 3 5.92 4.64 4.28 7.38c-.11.18-.22.37-.31.56L3.94 8H8v1H1.96V3h1v4.74c.04-.09.07-.17.11-.25.11-.22.23-.42.35-.63C5.22 3.86 8.51 2 12 2c5.51 0 10 4.49 10 10z"></path></g></svg>
-            <h1 class="text-2xl">Keep track of what you watch</h1>
-            <p class="text-sm leading-tight mb-3">Watch history isn't viewable when signed out.</p>
-            <a class="button google" href="/login/federated/google"><button
-                    class="flex items-center hover:bg-blue-100 hover:border-transparent text-blue-600 gap-1.5 border border-zinc-300 px-2.5 rounded-full">
-                    <i class="ri-account-circle-line text-2xl opacity-90 mt-[2px]"></i>
-                    <span class="text-sm font-medium">Sign in</span>
-                </button></a>
-        </div>        
-        <%}%>
-    <div class="history-options w-1/3 h-full px-2 py-24">
         <%if(loggedUser){%>
-            <div class="flex border-b border-zinc-900 w-80 py-2 mb-8 ml-3">
-                <i class="ri-search-2-line"></i>
-                <input class=" bg-transparent outline-none px-2" type="text" name=""
-                    placeholder="Search watch history" id="">
+            <div class="view-section w-2/3 overflow-y-auto h-full px-20 pt-8">
+                <h1 class="text-4xl font-bold mb-10">Watch History</h1>
+
+
+
+                <%Object.keys(allHistory).forEach(category=>{%>
+                    <%if(allHistory[category].shorts.length > 0 || allHistory[category].videos.length>0){%>
+
+
+                        <div class="day">
+                            <h2 class="text-xl font-bold my-8 capitalize">
+                                <%=category%>
+                            </h2>
+
+                            <div class="flex items-center gap-1 py-1.5 mb-4 relative">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    focusable="false" style="pointer-events: none; display: block;  height: 100%;">
+                                    <g>
+                                        <path
+                                            d="M17.77,10.32l-1.2-.5L18,9.06a3.74,3.74,0,0,0-3.5-6.62L6,6.94a3.74,3.74,0,0,0,.23,6.74l1.2.49L6,14.93a3.75,3.75,0,0,0,3.5,6.63l8.5-4.5a3.74,3.74,0,0,0-.23-6.74Z"
+                                            fill="red"></path>
+                                        <polygon points="10 14.65 15 12 10 9.35 10 14.65" fill="#fff"></polygon>
+                                    </g>
+                                </svg>
+                                <h2 class="text-xl font-bold">Shorts</h2>
+                                <i class="text-xl ri-more-2-fill absolute top-1/2 -translate-y-1/2 right-14 "></i>
+
+                            </div>
+                            <div class="shorts flex w-full gap-1 mb-6 overflow-x-auto">
+                                <%allHistory[category].shorts.reverse().forEach(short=>{%>
+                                    <div class="short w-52 h-max shrink-0">
+                                        <div class="video bg-zinc-300 rounded-lg w-full h-[18rem] overflow-hidden">
+                                            <img src="/uploads/images/<%=short.thumbnail%>"
+                                                class="w-full h-full object-cover" alt="">
+                                        </div>
+                                        <h4 class="text-sm font-semibold">
+                                            <%=short.description.slice(0,40)+"..."%>
+                                        </h4>
+                                        <h4 class="text-zinc-500 text-sm">
+                                            <%=short.views.length%> views
+                                        </h4>
+                                    </div>
+                                    <%})%>
+
+                            </div>
+                            <hr>
+                            <div class="videos mt-4">
+                                <%allHistory[category].videos.reverse().forEach(video=>{%>
+
+                                    <div class="video w-full mb-1 flex gap-3 h-max">
+                                        <div
+                                            class="cursor-pointer shrink-0 w-[16vw] aspect-video rounded-xl bg-zinc-200 mb-2 relative overflow-hidden">
+                                            <img src="/uploads/images/<%=video.thumbnail%>"
+                                                class="w-full h-full object-cover" alt="">
+                                        </div>
+                                        <div class="dets relative flex-1">
+                                            <i class="text-xl ri-more-2-fill absolute top-0 right-2 "></i>
+                                            <i
+                                                class="text-2xl ri-close-line absolute top-0 right-14 font-light text-zinc-600"></i>
+                                            <h2 class="leading-tight text-xl max-w-[18vw]">
+                                                <%=video.title%>
+                                            </h2>
+                                            <div class="flex gap-1 items-center my-1.5 text-zinc-500">
+                                                <h4 class="text-zinc-500 text-sm">
+                                                    <%=video.user.channel%>
+                                                </h4>
+                                                <i class="ri-circle-fill text-[4px]"></i>
+                                                <h4 class="text-sm">
+                                                    <%=video.views.length%> views
+                                                </h4>
+                                            </div>
+                                            <p class="text-zinc-500 text-sm">
+                                                <%=video.description.slice(0,90)%>
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <%})%>
+
+                            </div>
+                        </div>
+
+
+                <%}%>
+                <%})%>
+
             </div>
-            <%}%>
-        <div onclick="clearAllWatchHistory()" class="flex cursor-pointer hover:bg-zinc-200 items-center rounded-full gap-1.5 py-1.5 w-max mb-2 px-3">
-            <i class="text-xl ri-delete-bin-line mr-1"></i>
-            <h2 class="text-[1vw] font-medium">Clear all watch history</h2>
-        </div>
-        <div class="flex cursor-pointer hover:bg-zinc-200 items-center rounded-full gap-1.5 py-1.5 w-max mb-2 px-3">
-            <i class="text-2xl ri-pause-line -mb-[2px]"></i>
-            <h2 class="text-[1vw] font-medium">Pause watch history</h2>
-        </div>
+            <%}else{%>
+                <div class="flex w-2/3 h-full items-center pt-32 flex-col gap-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24"
+                        style="pointer-events: none; display: block; width: 12%; height: max-content;"
+                        viewBox="0 0 24 24" width="24" focusable="false">
+                        <g>
+                            <path
+                                d="M14.97 16.95 10 13.87V7h2v5.76l4.03 2.49-1.06 1.7zM22 12c0 5.51-4.49 10-10 10S2 17.51 2 12h1c0 4.96 4.04 9 9 9s9-4.04 9-9-4.04-9-9-9C8.81 3 5.92 4.64 4.28 7.38c-.11.18-.22.37-.31.56L3.94 8H8v1H1.96V3h1v4.74c.04-.09.07-.17.11-.25.11-.22.23-.42.35-.63C5.22 3.86 8.51 2 12 2c5.51 0 10 4.49 10 10z">
+                            </path>
+                        </g>
+                    </svg>
+                    <h1 class="text-2xl">Keep track of what you watch</h1>
+                    <p class="text-sm leading-tight mb-3">Watch history isn't viewable when signed out.</p>
+                    <a class="button google" href="/login/federated/google"><button
+                            class="flex items-center hover:bg-blue-100 hover:border-transparent text-blue-600 gap-1.5 border border-zinc-300 px-2.5 rounded-full">
+                            <i class="ri-account-circle-line text-2xl opacity-90 mt-[2px]"></i>
+                            <span class="text-sm font-medium">Sign in</span>
+                        </button></a>
+                </div>
+                <%}%>
+                    <div class="history-options w-1/3 h-full px-2 py-24">
+                        <%if(loggedUser){%>
+                            <div class="flex border-b border-zinc-900 w-80 py-2 mb-8 ml-3">
+                                <i class="ri-search-2-line"></i>
+                                <input class=" bg-transparent outline-none px-2" type="text" name=""
+                                    placeholder="Search watch history" id="">
+                            </div>
+                            <%}%>
+                                <div onclick="clearAllWatchHistory()"
+                                    class="flex cursor-pointer hover:bg-zinc-200 items-center rounded-full gap-1.5 py-1.5 w-max mb-2 px-3">
+                                    <i class="text-xl ri-delete-bin-line mr-1"></i>
+                                    <h2 class="text-[1vw] font-medium">Clear all watch history</h2>
+                                </div>
+                                <div
+                                    class="flex cursor-pointer hover:bg-zinc-200 items-center rounded-full gap-1.5 py-1.5 w-max mb-2 px-3">
+                                    <i class="text-2xl ri-pause-line -mb-[2px]"></i>
+                                    <h2 class="text-[1vw] font-medium">Pause watch history</h2>
+                                </div>
 
-</div>
+                    </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js" integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script>
-    function removeFromWatchHistory(elem,videoId){
-        axios.post(`/history/remove/${videoId}`)
-        .then(response=>{
-            document.querySelector(`#video${videoId}`).remove()
-        })
-    }
+                    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js"
+                        integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg=="
+                        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+                    <script>
+                        function removeFromWatchHistory(elem, videoId) {
+                            axios.post(`/history/remove/${videoId}`)
+                                .then(response => {
+                                    document.querySelector(`#video${videoId}`).remove()
+                                })
+                        }
 
-    function clearAllWatchHistory(){
-        axios.post('/history/clearall')
-        .then(response=>{
-            document.querySelector('#watchHistoryVideos').innerHTML=''
-        })
-    }
+                        function clearAllWatchHistory() {
+                            axios.post('/history/clearall')
+                                .then(response => {
+                                    document.querySelector('#watchHistoryVideos').innerHTML = ''
+                                })
+                        }
 
-</script>
+                    </script>
 
-<%include ./partials/footer%>
+                    <%include ./partials/footer%>
