watch history corrected

--- a/views/shorts.ejs
+++ b/views/shorts.ejs
@@ -1,7 +1,7 @@
 <%include ./partials/header%>
     <div id="parentDiv" class="right scroll-smooth h-[85vh] flex-1 relative px-6 overflow-y-auto">
 
-        <div id="child2" class="short-container transition-all duration-700 flex items-end justify-center py-3 mb-4">
+        <div id="child1" class="short-container transition-all duration-700 flex items-end justify-center py-3 mb-4">
 
             <div class="short-panel relative flex items-center justify-center w-[20rem] h-[80vh] bg-zinc-200 rounded-lg overflow-hidden">
                 <div class="thumbnail absolute top-0 left-0 w-full h-full pointer-events-none">
@@ -43,7 +43,7 @@
         <div class="short-container  flex items-end justify-center mb-4 transition-all duration-700 relative">
             <div class="short-panel w-80 h-[80vh] bg-[#fcfefc] overflow-hidden relative ">
                 <div class="thumbnail absolute top-0 left-0 w-full h-full pointer-events-none flex items-center">
-                    <img class="w-full object-contain " src="https://i.pinimg.com/originals/f3/98/c8/f398c8e928e0886d86c00e7770ccab78.gif" alt="">
+                    <img class="w-full object-contain " src="https://res.cloudinary.com/bytesizedpieces/image/upload/v1656084931/article/a-how-to-guide-on-making-an-animated-loading-image-for-a-website/animated_loader_gif_n6b5x0.gif" alt="">
                 </div>
             </div>
             <div class="options flex flex-col px-3">
