--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
         </div>
         <div class="videos w-full grid lg:grid-cols-3 grid-cols-2 py-5 gap-4 overflow-y-auto h-[85vh] ">
             <%shuffledVideos.forEach(function(video){%>
-                <a class="h-max" href="/video/<%=video._id%>">
+                <a class="h-max" href="/<%=video.type? 'video/'+video._id : 'playlist/'+video._id%>">
                     <div class="video mb-1">
                         <div
                             class="cursor-pointer flex justify-center w-full rounded-xl h-56 bg-zinc-900 mb-2 relative">
