--- a/views/you.ejs
+++ b/views/you.ejs
@@ -22,63 +22,33 @@
 
                 </div>
             </div>
+            <%if(loggedUser.watchedVideo.length>0){%>
             <div class="flex items-center gap-1.5 w-full relative">
                 <i class="ri-history-line text-xl"></i>
                 <h2 class="font-semibold text-xl">History</h2>
                 <a class="text-sm text-blue-700 absolute top-1/2 -translate-y-1/2 right-0 ">See all</a>
-
             </div>
             <div class="history-videos mt-6 flex gap-1 flex-wrap ">
-                <div class="video w-52 h-max mb-3">
-                    <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
-                    <div class="about-video w-full relative mt-1">
-                        <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
-                        <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram
-                        </h2>
-                        <h4 class="text-[.9vw]">channel name</h4>
-                        <h4 class="text-[.9vw]">11k watching</h4>
+                <%loggedUser.watchedVideo.forEach(video=>{%>
+                <a href="/video/<%=video.video._id%>">
+                    <div class="video w-52 h-max mb-3">
+                        <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg relative">
+                            <%if(video.video.thumbnail){%>
+                                <div class="thumbnail absolute top-0 left-0 w-full h-full z-[9] overflow-hidden bg-zinc-300 rounded-xl">
+                                    <img src="/uploads/images/<%=video.video.thumbnail%>"
+                                        class="w-full h-full object-cover" alt="">
+                                </div>
+                                <%}%>
+                        </div>
+                        <div class="about-video w-full relative mt-1">
+                            <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
+                            <h2 class="text-sm w-[90%] font-medium"><%=video.video.title%></h2>
+                            <h4 class="text-[.9vw]"><%=video.video.user.channel%></h4>
+                            <h4 class="text-[.9vw]"><%=video.video.views.length%> views</h4>
+                        </div>
                     </div>
-                </div>
-                <div class="video w-52 h-max mb-3">
-                    <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
-                    <div class="about-video w-full relative mt-1">
-                        <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
-                        <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram
-                        </h2>
-                        <h4 class="text-[.9vw]">channel name</h4>
-                        <h4 class="text-[.9vw]">11k watching</h4>
-                    </div>
-                </div>
-                <div class="video w-52 h-max mb-3">
-                    <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
-                    <div class="about-video w-full relative mt-1">
-                        <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
-                        <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram
-                        </h2>
-                        <h4 class="text-[.9vw]">channel name</h4>
-                        <h4 class="text-[.9vw]">11k watching</h4>
-                    </div>
-                </div>
-                <div class="video w-52 h-max mb-3">
-                    <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
-                    <div class="about-video w-full relative mt-1">
-                        <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
-                        <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram
-                        </h2>
-                        <h4 class="text-[.9vw]">channel name</h4>
-                        <h4 class="text-[.9vw]">11k watching</h4>
-                    </div>
-                </div>
-                <div class="video w-52 h-max mb-3">
-                    <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
-                    <div class="about-video w-full relative mt-1">
-                        <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
-                        <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram
-                        </h2>
-                        <h4 class="text-[.9vw]">channel name</h4>
-                        <h4 class="text-[.9vw]">11k watching</h4>
-                    </div>
-                </div>
+                </a>
+                <%})%>
                 <div class="video w-52 h-max mb-3">
                     <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
                     <div class="about-video w-full relative mt-1">
@@ -90,24 +60,70 @@
                     </div>
                 </div>
             </div>
+            <%}%>
+
+            <%if(loggedUser.watchLater.length>0){%>
+
             <div class="flex items-center gap-1.5 w-full relative">
                 <i class="ri-history-line text-xl"></i>
-                <h2 class="font-semibold text-xl">Watch Later <span>23</span></h2>
+                <h2 class="font-semibold text-xl">Watch Later <span><%=loggedUser.watchLater.length%></span></h2>
                 <a class="text-sm text-blue-700 absolute top-1/2 -translate-y-1/2 right-0 ">See all</a>
 
             </div>
-            <div class="history-videos mt-6 flex gap-1 flex-wrap ">
-                <div class="video w-52 h-max mb-3">
-                    <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
-                    <div class="about-video w-full relative mt-1">
-                        <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
-                        <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram
-                        </h2>
-                        <h4 class="text-[.9vw]">channel name</h4>
-                        <h4 class="text-[.9vw]">11k watching</h4>
-                    </div>
-                </div>
+            <div class="watchlater-videos mt-6 flex gap-1 flex-wrap ">
+                <%loggedUser.watchLater.forEach(video=>{%>
+                    <a href="/video/<%=video.video._id%>">
+                        <div class="video w-52 h-max mb-3">
+                            <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg relative">
+                                <%if(video.video.thumbnail){%>
+                                    <div class="thumbnail absolute top-0 left-0 w-full h-full z-[9] overflow-hidden bg-zinc-300 rounded-xl">
+                                        <img src="/uploads/images/<%=video.video.thumbnail%>"
+                                            class="w-full h-full object-cover" alt="">
+                                    </div>
+                                    <%}%>
+                            </div>
+                            <div class="about-video w-full relative mt-1">
+                                <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
+                                <h2 class="text-sm w-[90%] font-medium"><%=video.video.title%></h2>
+                                <h4 class="text-[.9vw]"><%=video.video.user.channel%></h4>
+                                <h4 class="text-[.9vw]"><%=video.video.views.length%> views</h4>
+                            </div>
+                        </div>
+                    </a>
+                    <%})%>
             </div>
+            <%}%>
+
+            <%if(loggedUser.likedVideo.length>0){%>
+            <div class="flex items-center gap-1.5 w-full relative">
+                <i class="ri-history-line text-xl"></i>
+                <h2 class="font-semibold text-xl">Liked Videos <span><%=loggedUser.likedVideo.length%></span></h2>
+                <a class="text-sm text-blue-700 absolute top-1/2 -translate-y-1/2 right-0 ">See all</a>
+
+            </div>
+            <div class="liked-videos mt-6 flex gap-1 flex-wrap ">
+                <%loggedUser.likedVideo.forEach(video=>{%>
+                    <a href="/video/<%=video._id%>">
+                        <div class="video w-52 h-max mb-3">
+                            <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg relative">
+                                <%if(video.thumbnail){%>
+                                    <div class="thumbnail absolute top-0 left-0 w-full h-full z-[9] overflow-hidden bg-zinc-300 rounded-xl">
+                                        <img src="/uploads/images/<%=video.thumbnail%>"
+                                            class="w-full h-full object-cover" alt="">
+                                    </div>
+                                    <%}%>
+                            </div>
+                            <div class="about-video w-full relative mt-1">
+                                <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
+                                <h2 class="text-sm w-[90%] font-medium"><%=video.title%></h2>
+                                <h4 class="text-[.9vw]"><%=video.user.channel%></h4>
+                                <h4 class="text-[.9vw]"><%=video.views.length%> views</h4>
+                            </div>
+                        </div>
+                    </a>
+                    <%})%>
+            </div>
+            <%}%>
 
             <%}else{%>
                 <div class="flex w-full h-full items-center pt-32 flex-col gap-5">
